// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmbeddedSearch renders with all props set except error 1`] = `
<Row
  gutter={
    Object {
      "lg": 32,
      "xs": 0,
    }
  }
  justify="start"
  type="flex"
>
  <ResponsiveView
    min="lg"
    render={[Function]}
  />
  <Col
    lg={17}
    xs={24}
  >
    <LoadingOrChildren
      loading={true}
    >
      <Row
        align="middle"
        gutter={0}
        justify="space-between"
        type="flex"
      >
        <Col
          lg={12}
          xs={24}
        >
          <NumberOfResults
            numberOfResults={5}
          />
          <Connect(Authorized)
            authorizedRoles={
              Immutable.Set [
                "superuser",
              ]
            }
          >
            <VerticalDivider />
            <CiteAllAction
              numberOfResults={5}
              query={
                Object {
                  "doc_type": "article",
                  "page": 2,
                  "size": 2,
                  "sort": "mostrecent",
                }
              }
            />
          </Connect(Authorized)>
        </Col>
        <ResponsiveView
          max="md"
          render={[Function]}
        />
        <Col>
          <SortBy
            onSortChange={[Function]}
            sort="mostrecent"
            sortOptions={
              Array [
                Object {
                  "display": "Most Recent",
                  "value": "mostrecent",
                },
              ]
            }
          />
        </Col>
      </Row>
      <Row
        gutter={0}
      >
        <Col
          span={24}
        >
          <SearchResults
            page={2}
            pageSize={2}
            renderItem={[MockFunction]}
            results={
              Immutable.List [
                Immutable.Map {
                  "value": "1",
                },
                Immutable.Map {
                  "value": "2",
                },
              ]
            }
          />
          <SearchPagination
            onPageChange={[Function]}
            page={2}
            pageSize={2}
            total={5}
          />
        </Col>
      </Row>
    </LoadingOrChildren>
  </Col>
</Row>
`;

exports[`EmbeddedSearch renders with only required props 1`] = `
<Row
  gutter={
    Object {
      "lg": 32,
      "xs": 0,
    }
  }
  justify="start"
  type="flex"
>
  <ResponsiveView
    min="lg"
    render={[Function]}
  />
  <Col
    lg={17}
    xs={24}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Row
        align="middle"
        gutter={0}
        justify="space-between"
        type="flex"
      >
        <Col
          lg={12}
          xs={24}
        >
          <NumberOfResults
            numberOfResults={0}
          />
          <Connect(Authorized)
            authorizedRoles={
              Immutable.Set [
                "superuser",
              ]
            }
          >
            <VerticalDivider />
            <CiteAllAction
              numberOfResults={0}
              query={
                Object {
                  "page": 2,
                  "size": 2,
                  "sort": "mostrecent",
                }
              }
            />
          </Connect(Authorized)>
        </Col>
        <ResponsiveView
          max="md"
          render={[Function]}
        />
        <Col>
          <SortBy
            onSortChange={[Function]}
            sort="mostrecent"
            sortOptions={null}
          />
        </Col>
      </Row>
      <Row
        gutter={0}
      >
        <Col
          span={24}
        >
          <SearchResults
            page={2}
            pageSize={2}
            renderItem={[MockFunction]}
            results={Immutable.List []}
          />
          <SearchPagination
            onPageChange={[Function]}
            page={2}
            pageSize={2}
            total={0}
          />
        </Col>
      </Row>
    </LoadingOrChildren>
  </Col>
</Row>
`;

exports[`EmbeddedSearch renders with only required props and error 1`] = `""`;
